JavaScript30: Clock: complete functions and design & add js documentation

--- a/JavaScript30/Clock/clock.css
+++ b/JavaScript30/Clock/clock.css
@@ -26,19 +26,21 @@
   top: 50%;
   left: 50%;
   transform-origin: 0%;
+  transition: all 0.5s;
+  transition-timing-function: cubic-bezier(0, 1.37, 0.29, 1.03);
 }
 
 .clock .hour {
-  transform: rotate(60deg);
+  transform: rotate(-90deg);
   width: 28%;
 }
 
 .clock .min {
-  transform: rotate(180deg);
+  transform: rotate(-90deg);
   width: 38%;
 }
 
 .clock .sec {
-  transform: rotate(250deg);
+  transform: rotate(-90deg);
   width: 48%;
 }
